# hashfuck

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: hashfuck.rs  main.rs
